--- a/show-info-page.html
+++ b/show-info-page.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
-<body>
+<body class="container">
 
     <header>
         <nav class="navbar navbar-light justify-content-between container">
