--- a/show-info-page.html
+++ b/show-info-page.html
@@ -15,7 +15,7 @@
 
     <header>
         <nav class="navbar navbar-light justify-content-between container">
-            <a class="navbar-brand">BitShow</a>
+            <h4><a class="navbar-brand" href="landing-page.html">BitShow</a></h4>
             <form class="form-inline">
                 <input class="form-control mr-sm-2 js-search-bar" type="search" placeholder="Search" aria-label="Search">
                 <ul class="search-list"></ul>
